--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,8 @@
 version: 2.1
-orbs:
-  ruby: circleci/ruby@1.1.2 
-
 jobs:
   build:
     docker:
-      - image: 'cimg/base:stable'
+      - image: cimg/ruby:2.7.2
     steps:
       - checkout
-      - ruby/install:
-          version: '2.7'
-      - run: echo "Ruby 2.7 has been installed"
+      - run: ruby --version
