--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ version: 2.1
 jobs:
   install:
     machine:
-      docker_layer_caching: true
-      
+      image: ubuntu-1604:201903-01
+
     steps:
       - checkout
       
