--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       
       - run:
           command: |
-            python --version
+            python3 --version
 
       - run:
           name: Install docker-squash
